# lovip-backend

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/core/: directory_listing.rs  mod.rs
src/core/enums/: mod.rs  subtitle.rs  video.rs
src/core/helpers/: ffmpeg.rs  mod.rs  responder.rs
src/http/: kernel.rs  mod.rs
src/http/controllers/: main_controller.rs  mod.rs  movie_controller.rs
src/http/middlewares/: auth_middleware.rs  mod.rs
