[package]
name = "lovip-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
strum = "0.24.1"
strum_macros = "0.24.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
base64 = "0.21.2"
